<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/logout"
        android:title="logout"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/category"
        android:title="category"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/amusementMenu"
                android:title="@string/amusement"
                app:showAsAction="never"/>
            <item
                android:id="@+id/householdMenu"
                android:title="@string/household"
                app:showAsAction="never"/>
            <item
                android:id="@+id/transportationMenu"
                android:title="@string/transportation"
                app:showAsAction="never"/>
            <item
                android:id="@+id/diningMenu"
                android:title="@string/dining"
                app:showAsAction="never"/>
            <item
                android:id="@+id/hcWellnMenu"
                android:title="@string/healthcare_wellness"
                app:showAsAction="never"/>
            <item
                android:id="@+id/groceriesMenu"
                android:title="@string/groceries"
                app:showAsAction="never"/>
            <item
                android:id="@+id/otherMenu"
                android:title="@string/other"
                app:showAsAction="never"/>
            <item
                android:id="@+id/allMenu"
                android:title="@string/all"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>