<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    tools:context=".AddTransactionActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/noteTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/radio_Other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/other"
            android:textColor="@color/yellow_orange"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/radio_Dining" />

        <RadioButton
            android:id="@+id/radio_Transportation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportation"
            android:textColor="@color/old_burgundy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_Household" />

        <RadioButton
            android:id="@+id/radio_Groceries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/groceries"
            android:textColor="@color/old_burgundy"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/radio_Hc_WellN" />

        <RadioButton
            android:id="@+id/radio_Dining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dining"
            android:textColor="@color/old_burgundy"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/radio_Groceries" />

        <RadioButton
            android:id="@+id/radio_Hc_WellN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthcare_wellness"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radio_Household"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/household"
            android:textColor="@color/old_burgundy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_Amusement" />

        <RadioButton
            android:id="@+id/radio_Amusement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amusement"
            android:textColor="@color/old_burgundy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RadioGroup>

    <ImageButton
        android:id="@+id/returnIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/alabaster"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTextLayout"
        style="@style/Widget.Pennywise.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/amount"
        android:maxEms="10"
        android:minEms="10"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTextInput">

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cornflower"
        android:clickable="true"
        android:foregroundTint="@color/old_burgundy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTextLayout"
        app:srcCompat="@drawable/baseline_save_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteTextInput"
        style="@style/Widget.Pennywise.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/note"
        android:maxEms="10"
        android:minEms="10"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfTransactionTV"
        app:startIconDrawable="@drawable/baseline_edit_note_24">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dateOfTransactionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/yellow_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_nav"/>

    <ImageButton
        android:id="@+id/deleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_delete_forever_24" />

</androidx.constraintlayout.widget.ConstraintLayout>